validaciones varios a nivel de form

--- a/src/app/marca/marca-list.component.html
+++ b/src/app/marca/marca-list.component.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col s12">
             <p-growl [value]="msgs" sticky="sticky"></p-growl>
-        <p-table [columns]="cols" [value]="marcas" [paginator]="true" [rows]="3"   [responsive]="true" [(selection)]="_marcaSelected" dataKey="nombre">
+        <p-table [columns]="cols" [value]="marcas" [paginator]="true" [rows]="6"   [responsive]="true" [(selection)]="_marcaSelected" dataKey="nombre">
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th style="width: 3em">
@@ -52,16 +52,16 @@
             <p-panel [showHeader]="false">
               <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                     <div class="input-field">
-                        <input type="text" id="name" formControlName="nombre" class="validate"/>
+                        <input type="text" id="name" formControlName="nombre" class="validate" required/>
                         <label for="name">Nombre</label>
                     </div>
                     <div class="input-field">
                         <label for="estadoUsuario">Estado</label><br/><br/>
-                        <p-dropdown [options]="estadosMarca" formControlName="estadoMarca" [(ngModel)]="_estadoMarca" class="validate"></p-dropdown>
+                        <p-dropdown [options]="estadosMarca" formControlName="estadoMarca" [(ngModel)]="_estadoMarca" class="validate" required></p-dropdown>
                         <p>Estado seleccionado: {{_estadoMarca ? _estadoMarca : 'none'}}</p>
                     </div>
                     <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarMarca()">Guardar
+                            <button [disabled]="!registrarMarcaForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarMarca()">Guardar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
@@ -82,16 +82,16 @@
                             <input pInputText id="idTlr" formControlName="idMrc" style="visibility:hidden"/>
                         </div>
                         <div class="input-field">
-                            <input type="text" id="nombre" formControlName="nombre" class="validate"/>
+                            <input type="text" id="nombre" formControlName="nombre" class="validate" disabled/>
                             <!-- <label for="name">Nombre</label> -->
                         </div>
                         <div class="input-field">
                             <label for="estadoTaller">Estado</label><br/><br/>
-                            <p-dropdown [options]="estadosMarca" formControlName="estadoMarca" [(ngModel)]="_estadoMarca" class="validate"></p-dropdown>
+                            <p-dropdown [options]="estadosMarca" formControlName="estadoMarca" [(ngModel)]="_estadoMarca" class="validate" required></p-dropdown>
                             <p>Estado seleccionado: {{_estadoMarca ? _estadoMarca : 'none'}}</p>
                         </div>
                         <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarMarca()">Actualizar
+                            <button [disabled]="!updateMarcaForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarMarca()">Actualizar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
