--- a/src/app/repuestos/repuestos-list.component.html
+++ b/src/app/repuestos/repuestos-list.component.html
@@ -52,20 +52,20 @@
             <p-panel [showHeader]="false">
               <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                     <div class="input-field">
-                        <input type="text" id="name" formControlName="nombre" class="validate"/>
+                        <input type="text" id="name" formControlName="nombre" class="validate" required/>
                         <label for="name">Nombre</label>
                     </div>
                     <div class="input-field">
-                        <input type="text" id="valor" formControlName="valor" class="validate"/>
+                        <input type="text" id="valor" formControlName="valor" class="validate" required/>
                         <label for="direccion">Valor</label>
                     </div>
                     <div class="input-field">
                         <label for="estadoUsuario">Estado</label><br/><br/>
-                        <p-dropdown [options]="estadosRepuesto" formControlName="estadoRepuesto" [(ngModel)]="_estadoRepuesto" class="validate"></p-dropdown>
+                        <p-dropdown [options]="estadosRepuesto" formControlName="estadoRepuesto" [(ngModel)]="_estadoRepuesto" class="validate" required></p-dropdown>
                         <p>Estado seleccionado: {{_estadoRepuesto ? _estadoRepuesto : 'none'}}</p>
                     </div>
                     <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarRepuesto()">Guardar
+                            <button [disabled]="!registrarRepForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarRepuesto()">Guardar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
@@ -86,18 +86,18 @@
                             <input pInputText id="idRep" formControlName="idRep" style="visibility:hidden"/>
                         </div>
                         <div class="input-field">
-                            <input type="text" id="nombre" formControlName="nombre" class="validate"/>
+                            <input type="text" id="nombre" formControlName="nombre" class="validate" disabled/>
                         </div>
                         <div class="input-field">
-                            <input type="text" id="valor" formControlName="valor" class="validate"/>
+                            <input type="text" id="valor" formControlName="valor" class="validate" required/>
                         </div>
                         <div class="input-field">
                             <label for="estadoTaller">Estado</label><br/><br/>
-                            <p-dropdown [options]="estadosRepuesto" formControlName="estadoRepuesto" [(ngModel)]="_estadoRepuesto" class="validate"></p-dropdown>
+                            <p-dropdown [options]="estadosRepuesto" formControlName="estadoRepuesto" [(ngModel)]="_estadoRepuesto" class="validate" required></p-dropdown>
                             <p>Estado seleccionado: {{_estadoRepuesto ? _estadoRepuesto : 'none'}}</p>
                         </div>
                         <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarRepuesto()">Actualizar
+                            <button [disabled]="!updateRepForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarRepuesto()">Actualizar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
