--- a/src/app/aseguradora/aseguradora-list.component.html
+++ b/src/app/aseguradora/aseguradora-list.component.html
@@ -51,37 +51,37 @@
             <p-panel [showHeader]="false">
               <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                     <div class="input-field">
-                        <input type="text" id="name" formControlName="nombre" class="validate"/>
+                        <input type="text" id="name" formControlName="nombre" class="validate" required/>
                         <label for="name">Nombre</label>
                     </div>
                     <div class="input-field">
-                        <input type="text" id="razonSocial" formControlName="razonSocial" class="validate"/>
+                        <input type="text" id="razonSocial" formControlName="razonSocial" class="validate" required/>
                         <label for="razonSocial">Razon Social</label>
                     </div>
                     <div class="input-field">
-                        <input type="text" id="nit" formControlName="nit" class="validate"/>
+                        <input type="text" id="nit" formControlName="nit" class="validate" required/>
                         <label for="nit">NIT</label>
                     </div>
                     <div class="input-field">
-                        <input type="text" id="iva" formControlName="iva" class="validate"/>
+                        <input type="text" id="iva" formControlName="iva" class="validate" required/>
                         <label for="iva">IVA</label>
                     </div>
                     <div class="input-field" style="display:inline-block;padding: 5px;">
                         <label for="estadoAseguradora">Estado</label><br/><br/>
-                        <p-dropdown [options]="estadosAseguradora" formControlName="estadoAseguradora" [(ngModel)]="_estadoAseguradora" class="validate"></p-dropdown>
+                        <p-dropdown [options]="estadosAseguradora" formControlName="estadoAseguradora" [(ngModel)]="_estadoAseguradora" class="validate" required></p-dropdown>
                         <p>Estado seleccionado: {{_estadoAseguradora ? _estadoAseguradora : 'none'}}</p>
                     </div>
                     <div class="input-field" style="display:inline-block;padding: 20px;">
                         <label for="usuario">Usuario</label><br/><br/>
-                        <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate"></p-dropdown>
+                        <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate" required></p-dropdown>
                         <p>Usuario seleccionado: {{_userSeleccionado ? _userSeleccionado.nombre : 'none'}}</p>
                     </div>
                     <div class="input-field" style="display:inline-block;padding: 20px;">
-                        <input type="text" id="cargo" formControlName="cargo" class="validate"/>
+                        <input type="text" id="cargo" formControlName="cargo" class="validate" required/>
                         <label for="usuario">cargo</label><br/><br/>
                     </div>
                     <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarAseguradora()">Guardar
+                            <button [disabled]="!registrarAseguradoraForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarAseguradora()">Guardar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
@@ -102,38 +102,38 @@
                             <input pInputText id="idAseg" formControlName="idAseg" style="visibility:hidden"/>
                         </div>
                         <div class="input-field">
-                            <input type="text" id="nombre" formControlName="nombre" class="validate"/>
+                            <input type="text" id="nombre" formControlName="nombre" class="validate" disabled/>
                             <!-- <label for="name">Nombre</label> -->
                         </div>
                         <div class="input-field">
-                            <input type="text" id="razonSocial" formControlName="razonSocial" class="validate"/>
+                            <input type="text" id="razonSocial" formControlName="razonSocial" class="validate" required/>
                             <!-- <label for="name">Nombre</label> -->
                         </div>
                         <div class="input-field">
-                            <input type="text" id="nit" formControlName="nit" class="validate"/>
+                            <input type="text" id="nit" formControlName="nit" class="validate" required/>
                             <!-- <label for="name">Nombre</label> -->
                         </div>
                         <div class="input-field">
-                            <input type="text" id="iva" formControlName="iva" class="validate"/>
+                            <input type="text" id="iva" formControlName="iva" class="validate" required/>
                             <!-- <label for="name">Nombre</label> -->
                         </div>
                         
                         <div class="input-field" style="display:inline-block;padding: 20px;">
                             <label for="estadoTaller">Estado</label><br/><br/>
-                            <p-dropdown [options]="estadosAseguradora" formControlName="estadoAseg" [(ngModel)]="_estadoAseguradora" class="validate"></p-dropdown>
+                            <p-dropdown [options]="estadosAseguradora" formControlName="estadoAseg" [(ngModel)]="_estadoAseguradora" class="validate" required></p-dropdown>
                             <p>Estado seleccionado: {{_estadoAseguradora ? _estadoAseguradora : 'none'}}</p>
                         </div>
                         <div class="input-field" style="display:inline-block;padding: 20px;">
                             <label for="usuario">Usuario</label><br/><br/>
-                            <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate"></p-dropdown>
+                            <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate" required></p-dropdown>
                             <p>Usuario seleccionado: {{_userSeleccionado ? _userSeleccionado.nombre : 'none'}}</p>
                         </div>
                         <div class="input-field" style="display:inline-block;padding: 20px;">
-                            <input type="text" id="cargo" formControlName="cargo" class="validate"/>
+                            <input type="text" id="cargo" formControlName="cargo" class="validate" required/>
                             <label for="usuario">cargo</label><br/><br/>
                         </div>
                         <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarAseguradora()">Actualizar
+                            <button [disabled]="!updateAsegForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarAseguradora()">Actualizar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
