--- a/src/app/callCenter/callCenter.component.html
+++ b/src/app/callCenter/callCenter.component.html
@@ -52,15 +52,15 @@
             <p-panel [showHeader]="false">
               <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                     <div class="input-field">
-                        <input type="text" id="name" formControlName="nombre" class="validate"/>
+                        <input type="text" id="name" formControlName="nombre" class="validate" required/>
                         <label for="nombre">Nombre</label>
                     </div>
                     <div class="input-field">
-                        <input type="text" id="razonSocial" formControlName="razonSocial" class="validate"/>
+                        <input type="text" id="razonSocial" formControlName="razonSocial" class="validate" required/>
                         <label for="razonSocial">razonSocial</label>
                     </div>
                     <div class="input-field">
-                        <input type="text" id="telefono" formControlName="telefono" class="validate"/>
+                        <input type="text" id="telefono" formControlName="telefono" class="validate" required/>
                         <label for="telefono">Telefono</label>
                     </div>
                    <!--  <div class="input-field" style="display:inline-block;padding: 5px;">
@@ -70,15 +70,15 @@
                     </div> -->
                     <div class="input-field" style="display:inline-block;padding: 20px;">
                         <label for="usuario">Usuario</label><br/><br/>
-                        <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate"></p-dropdown>
+                        <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate" required></p-dropdown>
                         <p>Usuario seleccionado: {{_userSeleccionado ? _userSeleccionado.nombre : 'none'}}</p>
                     </div>
                     <div class="input-field" style="display:inline-block;padding: 20px;">
-                        <input type="text" id="cargo" formControlName="cargo" class="validate"/>
+                        <input type="text" id="cargo" formControlName="cargo" class="validate" required/>
                         <label for="usuario">cargo</label><br/><br/>
                     </div>
                     <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarCallCenter()">Guardar
+                            <button [disabled]="!registrarCceForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarCallCenter()">Guardar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
@@ -99,13 +99,13 @@
                             <input pInputText id="idCce" formControlName="idCce" style="visibility:hidden"/>
                         </div>
                         <div class="input-field">
-                            <input type="text" id="nombre" formControlName="nombre" class="validate"/>
+                            <input type="text" id="nombre" formControlName="nombre" class="validate" disabled/>
                         </div>
                         <div class="input-field">
-                            <input type="text" id="razonSocial" formControlName="razonSocial" class="validate"/>
+                            <input type="text" id="razonSocial" formControlName="razonSocial" class="validate" required/>
                         </div>
                         <div class="input-field">
-                            <input type="text" id="telefono" formControlName="telefono" class="validate"/>
+                            <input type="text" id="telefono" formControlName="telefono" class="validate" required/>
                         </div>
                        <!--  <div class="input-field" style="display:inline-block;padding: 20px;">
                             <label for="estadoTaller">Estado</label><br/><br/>
@@ -114,15 +114,15 @@
                         </div> -->
                         <div class="input-field" style="display:inline-block;padding: 20px;">
                             <label for="usuario">Usuario</label><br/><br/>
-                            <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate"></p-dropdown>
+                            <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate" required></p-dropdown>
                             <p>Usuario seleccionado: {{_userSeleccionado ? _userSeleccionado.nombre : 'none'}}</p>
                         </div>
                         <div class="input-field" style="display:inline-block;padding: 20px;">
-                            <input type="text" id="cargo" formControlName="cargo" class="validate"/>
+                            <input type="text" id="cargo" formControlName="cargo" class="validate" required/>
                             <label for="usuario">cargo</label><br/><br/>
                         </div>
                         <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarCallCenter()">Actualizar
+                            <button [disabled]="!updateCceForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarCallCenter()">Actualizar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
