--- a/src/app/users/user-list.component.html
+++ b/src/app/users/user-list.component.html
@@ -125,25 +125,25 @@
                 <p-panel [showHeader]="false">
                   <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                         <div class="input-field">
-                            <input type="text" id="user" formControlName="usuario" class="validate"/>
+                            <input type="text" id="user" formControlName="usuario" class="validate" required/>
                             <label for="user">Usuario</label>
                         </div>
                         <div class="input-field">
-                            <input type="text" id="name" formControlName="nombre" class="validate"/>
+                            <input type="text" id="name" formControlName="nombre" class="validate" required/>
                             <label for="name">Nombre</label>
                         </div>
                         <div class="input-field">
                             <label for="tipoUsuario">Tipo de usuario</label><br/><br/>
-                            <p-dropdown [options]="tiposUsuarios" formControlName="tipoUsuario" [(ngModel)]="_tipoSeleccionado" class="validate"></p-dropdown>
+                            <p-dropdown [options]="tiposUsuarios" formControlName="tipoUsuario" [(ngModel)]="_tipoSeleccionado" class="validate" required></p-dropdown>
                             <p>Tipo seleccionado: {{_tipoSeleccionado ? _tipoSeleccionado.id : 'none'}}</p>
                         </div>
                         <div class="input-field">
                             <label for="estadoUsuario">Estado</label><br/><br/>
-                            <p-dropdown [options]="estadosUsuario" formControlName="estadoUsuario" [(ngModel)]="_estadoUsuario" class="validate"></p-dropdown>
+                            <p-dropdown [options]="estadosUsuario" formControlName="estadoUsuario" [(ngModel)]="_estadoUsuario" class="validate" required></p-dropdown>
                             <p>Estado seleccionado: {{_estadoUsuario ? _estadoUsuario.estado : 'none'}}</p>
                         </div>
                         <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarUser()">Guardar
+                            <button [disabled]="!registrarUserForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarUser()">Guardar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
@@ -164,31 +164,25 @@
                       <input pInputText id="idUsr" formControlName="idUsr" style="visibility:hidden"/>
                   </div>
                   <div class="input-field">
-                      <input type="text" id="usuario" formControlName="usuario" class="validate"/>
+                      <input type="text" id="usuario" formControlName="usuario" class="validate" disabled/>
                       <!-- <label for="user">Usuario</label> -->
                   </div>
                   <div class="input-field">
-                      <input type="text" id="nombre" formControlName="nombre" class="validate"/>
+                      <input type="text" id="nombre" formControlName="nombre" class="validate" required/>
                       <!-- <label for="name">Nombre</label> -->
                   </div>
-                  <!-- <div class="input-field">
-                      <input type="text" id="tipo" formControlName="tipoUsuario" class="validate"/>
-                  </div> -->
                   <div class="input-field">
                     <label for="tipoUsuario">Tipo de usuario</label><br/><br/>
-                    <p-dropdown [options]="tiposUsuarios" formControlName="tipoUsuario" [(ngModel)]="_tipoSeleccionado" class="validate"></p-dropdown>
+                    <p-dropdown [options]="tiposUsuarios" formControlName="tipoUsuario" [(ngModel)]="_tipoSeleccionado" class="validate" required></p-dropdown>
                     <p>Tipo seleccionado: {{_tipoSeleccionado ? _tipoSeleccionado.id : 'none'}}</p>
                 </div>
-                  <!--  <div class="input-field">
-                      <input type="text" id="estadoUsuario" formControlName="estadoUsuario" class="validate"/>
-                  </div> -->
                   <div class="input-field">
                     <label for="estadoUsuario">Estado</label><br/><br/>
-                    <p-dropdown [options]="estadosUsuario" formControlName="estadoUsuario" [(ngModel)]="_estadoUsuario" class="validate"></p-dropdown>
+                    <p-dropdown [options]="estadosUsuario" formControlName="estadoUsuario" [(ngModel)]="_estadoUsuario" class="validate" required></p-dropdown>
                     <p>Estado seleccionado: {{_estadoUsuario ? _estadoUsuario : 'none'}}</p>
                 </div>
                   <div class="input-field">
-                      <button class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarUser()">Actualizar
+                      <button [disabled]="!updateUserForm.valid" class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarUser()">Actualizar
                           <i class="material-icons right">send</i>
                       </button>
                   </div>
