Guardar preguntas de seguridad y creacion contraseña

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,6 +33,12 @@
                     <div class="row">
                         <div class="col s12">
                             <!-- <a id="resetPass" href="#" (click)='recuperarContrasenha()'>¿Ha olvidado su contrase&ntilde;a?</a> -->
+                            <button class="waves-effect waves-light btn" (click)='crearContrasenha()'><i class="material-icons left">check</i>Crear contrase&ntilde;a</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <!-- <a id="resetPass" href="#" (click)='recuperarContrasenha()'>¿Ha olvidado su contrase&ntilde;a?</a> -->
                             <button class="waves-effect waves-light btn" (click)='recuperarContrasenha()'><i class="material-icons left">check</i>¿Ha olvidado su contrase&ntilde;a?</button>
                         </div>
                     </div>
