--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,6 +33,7 @@
             <li><a (click)='principalProveedor()'>Proveedores</a></li>
             <li><a (click)='principalRepuesto()'>Repuestos</a></li>
             <li><a (click)='principalCallCenter()'>CallCenter</a></li>
+            <li><a (click)='principalCrearSoli()'>Crear Solicitud</a></li>
             <li><a (click)='principalStar()'>Star</a></li>
             <li><a (click)='logOut()'>Salir</a></li>
         </ul>
