Consulta de solicitud

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,6 +34,7 @@
             <li><a (click)='principalRepuesto()'>Repuestos</a></li>
             <li><a (click)='principalCallCenter()'>CallCenter</a></li>
             <li><a (click)='principalCrearSoli()'>Crear Solicitud</a></li>
+            <li><a (click)='principalVerSolicitud()'>Ver Solicitud</a></li>
             <li><a (click)='principalStar()'>Star</a></li>
             <li><a (click)='logOut()'>Salir</a></li>
         </ul>
