Obtencion de codigo Solicitud desde backend

--- a/src/app/crearSolicitud/crearSolicitud.component.html
+++ b/src/app/crearSolicitud/crearSolicitud.component.html
@@ -4,7 +4,7 @@
 
             <div class="input-field" style="text-align: left;" >
                 <input type="text" id="codigoSol" formControlName="codigoSol" class="validate" required disabled/>
-                <label for="codigoSol">Codigo</label>
+                <!-- <label for="codigoSol">Codigo</label> -->
             </div>
 
             <!-- DATOS PERSONALES-->
