solicitud con vista del proveedor: inicial

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,6 +35,7 @@
             <li><a (click)='principalCallCenter()'>CallCenter</a></li>
             <li><a (click)='principalCrearSoli()'>Crear Solicitud</a></li>
             <li><a (click)='principalVerSolicitud()'>Ver Solicitud</a></li>
+            <li><a (click)='principalSoliProveedor()'>Solicitud Proveedor</a></li>
             <li><a (click)='principalStar()'>Star</a></li>
             <li><a (click)='logOut()'>Salir</a></li>
         </ul>
