--- a/src/app/verSolicitud/solicitudDetail.component.html
+++ b/src/app/verSolicitud/solicitudDetail.component.html
@@ -4,7 +4,7 @@
 
           <div class="input-field" style="text-align: left;" >
             <!-- <label for="codigoSol">Codigo</label> -->
-              <input type="text" id="codigoSol" formControlName="codigoSol" class="validate" required disabled/>
+              <input type="text" id="codigoSol" formControlName="codigoSol" class="validate" required disabled #codigoSol/>
              
           </div>
 
